--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "test": "node --test",
     "test-spec": "node --test --test-reporter spec",
-    "test-coverage": "node --test --experimental-test-coverage"
+    "test-coverage": "NODE_V8_COVERAGE=coverage node --test --experimental-test-coverage"
   },
   "repository": {
     "type": "git",
