--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -36,6 +36,8 @@ jobs:
       - run: make install
       - run: make lint
       - run: make test-coverage
+      - run:
+          echo "REPORT_FILE=$(ls -AU coverage | head -1)" >> $GITHUB_ENV
       # - name: Test & publish code coverage
         # Publish code coverage on Code Climate
         # https://github.com/paambaati/codeclimate-action
@@ -51,6 +53,6 @@ jobs:
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
         with:
-          files: ./coverage/
+          files: ./coverage/${{ env.REPORT_FILE }}
           token: ${{ secrets.CODECOV_TOKEN }}
           verbose: true
